# cddock

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: product-plan.md
scripts/: install-dev.sh  install.sh  package-release.sh  test.sh
src/: backup.rs  builds.rs  config.rs  guide.rs  http.rs  install.rs  launch.rs  main.rs  nav.rs  paths.rs  platform.rs  platform_actions.rs
