[package]
name = "cddock"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.28"
flate2 = "1.1"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
zip = "2.2"
